Link to wiki to evening activities in the schedule

--- a/socrates/lib/site/views/schedule.jade
+++ b/socrates/lib/site/views/schedule.jade
@@ -106,7 +106,12 @@ block content
 
       h2 Evening activities
       p
-        | In the previous years there were a multitude of things going on in the evenings, from music (some participants
+        | Participants organize evening activities. In the previous years there
+        | were a multitude of things going on in the evenings, from music (some participants
         | brought instruments, songbooks etc., one year they even wrote a song about the conference) over board games to #{''}
         +extlink('https://github.com/janernsting/maexchen', 'live-hacking programs to play mia against each other')
         |. And of course there's always plenty of people to just talk to, or continue discussions from the day.
+      p
+        | Check out the #{''}
+        a(href='/wiki/2015/evening-activities') wiki
+        |  page to see what is currently being proposed. Don't for get to contribute your ideas.
