Extend conference start section in the schedule

--- a/socrates/lib/site/views/schedule.jade
+++ b/socrates/lib/site/views/schedule.jade
@@ -28,7 +28,11 @@ block content
             +extlink('http://en.wikipedia.org/wiki/Open_Space_Technology','Wikipedia')
       dl
         dt Thursday
-        dd The conference starts at 5pm on Thursday, August 27th 2015.
+        dd.
+          The conference starts at 5pm on Thursday, August 27th 2015.
+          This is the time to get to know new faces or meet old friends, have
+          some drinks at the bar, explore the surrounding area etc.
+          T-Shirts are bing distributed and deposits are returned.
         dd.
           Starting around 6.30pm the hotel will serve a buffet so that even
           people who arrived a little later will get something to eat.
