Update Thursday dinner time
and miscellaneous wording improvements

--- a/socrates/lib/site/views/schedule.jade
+++ b/socrates/lib/site/views/schedule.jade
@@ -32,9 +32,9 @@ block content
           The conference starts at 5pm on Thursday, August 27th 2015.
           This is the time to get to know new faces or meet old friends, have
           some drinks at the bar, explore the surrounding area etc.
-          T-Shirts are bing distributed and deposits are returned.
+          T-Shirts are being distributed and deposits are returned.
         dd.
-          Starting around 6.30pm the hotel will serve a buffet so that even
+          Starting around 6pm the hotel will serve a buffet so that even
           people who arrived a little later will get something to eat.
         dd Later around 7.30pm we will officially start the conference with a #{''}
           +extlink('https://en.wikipedia.org/wiki/The_World_Cafe', 'World Café')
@@ -73,10 +73,10 @@ block content
           |  page.
         dd.
           Each workshop can choose themselves when they want to start (though
-          rooms are available at 9am) and when they want to end, but the latest
+          rooms are available from 9am) and when they want to end, but the latest
           they have to end sometime around 6pm.
       p
-        | To get an impression of what you can expect, have a look at 2013's schedule for #{''}
+        | To get an impression of what you can expect, have a look at 2013's Open Space timetable for #{''}
         a(href='/static/socrates_2013_collection/large-12.html') Friday
         |  and #{''}
         a(href='/static/socrates_2013_collection/large-13.html') Saturday.
@@ -114,4 +114,4 @@ block content
       p
         | Check out the #{''}
         a(href='/wiki/2015/evening-activities') wiki
-        |  page to see what is currently being proposed. Don't for get to contribute your ideas.
+        |  page to see what is currently being proposed. Don't forget to contribute your ideas.
