--- a/softwerkskammer/lib/site/views/index.jade
+++ b/softwerkskammer/lib/site/views/index.jade
@@ -12,6 +12,13 @@ block content
           small #{t('general.communities')}
 
   .row
+    .col-md-12
+      h2 Aktuell: Der Global Day of Coderetreat am 14. November 2015
+      p
+        | Hier findest Du&nbsp;
+        a(href="activities/gdcr") die meisten der Veranstaltungen im Softwerkskammer-Einzugsgebiet.
+      hr
+  .row
     .col-md-6
       !=t('general.about_us_text', { postProcess: 'jade' })
       if (language === 'de')
