Replaced iconv by iconv-lite to minimize the amount of native code. Does not support transliteration yet (i.e. replacing of accented characters by similar non-accented ones). Otherwise, works fine.

--- a/softwerkskammer/lib/site/views/credits.jade
+++ b/softwerkskammer/lib/site/views/credits.jade
@@ -82,7 +82,7 @@ block content
         +defItem('jade', 'http://jade-lang.com/', 'Template Engine')
         +defItem('Marked', 'https://github.com/chjj/marked', 'Markdown nach HTML')
         +defItem('Syntaxhighlighter', 'https://github.com/thlorenz/node-syntaxhighlighter', 'Syntax Highlighting in markdown')
-        +defItem('iconv', 'https://github.com/bnoordhuis/node-iconv', 'Text Recoding')
+        +defItem('iconv-lite', 'https://github.com/ashtuchkin/iconv-lite', 'Text Recoding')
         +defItem('node-imagemagick', 'https://github.com/rsms/node-imagemagick', 'Ein Wrapper für die imagemagick Werkzeuge')
         +defItem('Image Magick', 'http://imagemagick.org/', 'Erzeugen, bearbeiten, kombinieren, konvertieren von Bitmaps')
         +defItem('i18next', 'https://github.com/jamuhl/i18next-node', 'Internationalisierung')
