Extracted the blog post links into their own "Experience Reports" page.

--- a/socrates/lib/site/views/values.jade
+++ b/socrates/lib/site/views/values.jade
@@ -41,8 +41,8 @@ block content
       h4 Credits
       p These values are inspired by the following works.
       ul
-        +bloglink('https://www.djangoproject.com/conduct/', 'Django Code of Conduct')
-        +bloglink('http://citizencodeofconduct.org/', 'Citizenship Code of Conduct')
+        li: +extlink('https://www.djangoproject.com/conduct/', 'Django Code of Conduct')
+        li: +extlink('http://citizencodeofconduct.org/', 'Citizenship Code of Conduct')
     .col-md-6
       h4 Further Questions?
       p Feel invited to contact us via one of the buttons below.
