--- a/socrates/lib/site/views/schedule.jade
+++ b/socrates/lib/site/views/schedule.jade
@@ -88,20 +88,9 @@ block content
         | For ideas about what you can do in advance have a look at #{''}
         +extlink('http://www.unconference.net/unconferencing-how-to-prepare-to-attend-an-unconference/', 'this article')
         |.
-      p To get an even better impression, check out some of the experience reports
-        | from 2014, the first time the conference took place in Soltau, with
-        | almost 150 participants.
-      ul
-        +bloglink('http://blog.8thlight.com/doug-bradbury/2014/08/12/socrates-2014-a-vibrant-german-software-craftsmanship-community.html', 'Doug Bradbury from 8th Light')
-        +bloglink('http://www.uxebu.com/blog/2014/08/socrates-2014/', 'Wolfram Kriesing from Uxebu')
-        +bloglink('http://blog.soler-sanandres.net/Socrates14/', 'Alexandre Soler Sanandres')
-        +bloglink('http://www.bn2vs.com/blog/2014/08/11/socrates-2014/', 'Jeroen De Dauw')
-        +bloglink('http://qualocustech.wordpress.com/2014/08/12/i-edited-code-using-this-one-weird-vim-trick-you-wont-believe-what-happened-next/', 'Christo Fogelberg')
-      p There are also some experience reports from 2013:
-      ul
-        +bloglink('http://blog.florian-hopf.de/2013/08/socrates-2013-two-days-of-open-space.html', 'Florian Hopf')
-        +bloglink('http://monospacedmonologues.com/post/58252924228/socrates-2013', 'Samir Talwar')
-        +bloglink('https://blog.codecentric.de/en/2013/08/socrates2013/', 'Robert Hostlowsky')
+      p To get an even better impression, check out some of the #{''}
+        a(href='/experienceReports.html') experience reports
+        | #{''} from previous years.
       p Facilitation will be in English. However, it will be possible to run sessions in other languages.
 
       h2 Evening activities
