Update/simplify schedule

--- a/socrates/lib/site/views/schedule.jade
+++ b/socrates/lib/site/views/schedule.jade
@@ -29,10 +29,11 @@ block content
       dl
         dt Thursday
         dd.
-          The conference starts at 5pm on Thursday, August 27th 2015.
+          The conference starts at 5pm on Thursday, August 25th 2016.
           This is the time to get to know new faces or meet old friends, have
           some drinks at the bar, explore the surrounding area etc.
-          T-Shirts are being distributed and deposits are returned.
+          T-Shirts are being distributed.
+        //- TODO "and deposits are returned" ?
         dd.
           Starting around 6pm the hotel will serve a buffet so that even
           people who arrived a little later will get something to eat.
@@ -51,9 +52,11 @@ block content
         dd
           | Around 7pm dinner is available for around 2h, so everyone can start
           | into the evening at their own pace. Of course there's lots of room for
-          | shared #{''}
-          a(href='/wiki/2015/evening-activities') evening activities
-          |  like board games, making music, hacking or just talking and having fun.
+          | shared evening activities like board games, making music, hacking
+          | or just talking and having fun. Take a look at #{''}
+          a(href='/wiki/2015/evening-activities') last year's activities
+          |  to get an impression of the kind of activities that will happen.
+        //- TODO update with new wiki
         dt Saturday
         dd Saturday is also completely reserved for a full-day #{''}
           +extlink('http://agilecoachcamp.org/tiki-index.php?page=OpenSpace', 'Open Space')
@@ -67,15 +70,17 @@ block content
         dd Participants staying until Sunday (or longer) can have dinner starting at 7pm.
         dt Sunday
         dd
-          | Sunday is reserved for workshop oriented formats. Go and make a
-          | suggestion or request for a workshop on the #{''}
+          | Sunday is reserved for workshop oriented formats. Last year we had
+          | the following #{''}
           a(href='/wiki/2015/sunday-workshops') Sunday Workshops
-          |  page.
+          | .
+        //- TODO update with new wiki
         dd.
           Each workshop can choose themselves when they want to start (though
           rooms are available from 9am) and when they want to end, but the latest
           they have to end sometime around 6pm.
       p
+        //- TODO newer pictures
         | To get an impression of what you can expect, have a look at 2013's Open Space timetable for #{''}
         a(href='/static/socrates_2013_collection/large-12.html') Friday
         |  and #{''}
@@ -93,14 +98,16 @@ block content
         | #{''} from previous years.
       p Facilitation will be in English. However, it will be possible to run sessions in other languages.
 
-      h2 Evening activities
-      p
-        | Participants organize evening activities. In the previous years there
-        | were a multitude of things going on in the evenings, from music (some participants
-        | brought instruments, songbooks etc., one year they even wrote a song about the conference) over board games to #{''}
-        +extlink('https://github.com/janernsting/maexchen', 'live-hacking programs to play mia against each other')
-        |. And of course there's always plenty of people to just talk to, or continue discussions from the day.
-      p
-        | Check out the #{''}
-        a(href='/wiki/2015/evening-activities') wiki
-        |  page to see what is currently being proposed. Don't forget to contribute your ideas.
+      //
+        TODO include again after wiki update
+        h2 Evening activities
+        p
+            | Participants organize evening activities. In the previous years there
+            | were a multitude of things going on in the evenings, from music (some participants
+            | brought instruments, songbooks etc., one year they even wrote a song about the conference) over board games to #{''}
+            +extlink('https://github.com/janernsting/maexchen', 'live-hacking programs to play mia against each other')
+            |. And of course there's always plenty of people to just talk to, or continue discussions from the day.
+        p
+            | Check out the #{''}
+            a(href='/wiki/2015/evening-activities') wiki
+            |  page to see what is currently being proposed. Don't forget to contribute your ideas.
