--- a/socrates/lib/site/views/index.jade
+++ b/socrates/lib/site/views/index.jade
@@ -26,7 +26,7 @@ block content
             li you are passionate about software development and testing.
             li you have already heard of Software Craftsmanship or even already are part of the growing community.
             li you want to share your knowlege, experience and expertise.
-          
+
           h3 It's about Action
           p The event will be run as a non-profit, low-cost event. It is a joint-effort of all #{''}
             a(href='http://www.softwerkskammer.org', target='_blank') Softwerkskammer
@@ -43,7 +43,7 @@ block content
                 li lots more
           h3 It's about Fun
           p.
-            We will not only spend the days together but also the nights. And &ndash; believe it or not &ndash; programmers 
+            We will not only spend the days together but also the nights. And &ndash; believe it or not &ndash; programmers
             are a great company! There will be be lots of opportunities to spend your time. Starting with simple chilling over
             hiking and biking, playing games, hanging around, talking, laughing, &hellip;
           p
@@ -97,24 +97,29 @@ block content
     .logocolumn.col-sm-4.col-md-3.col-lg-4.col-md-offset-1.col-lg-offset-0
       .sidebar
         .page-header
-          h2 Our Sponsors
-        each pair, index in sponsors
-          .row
-            +sponsorCol(pair.first)
-            if (pair.second)
+          h2 Sponsors needed
+        //
+          TODO update when we have sponsors
+          .page-header
+            h2 Our Sponsors
+          each pair, index in sponsors
+            .row
+              +sponsorCol(pair.first)
+              if (pair.second)
+                hr.sponsorline.hidden-lg
+                +sponsorCol(pair.second)
+            .row
               hr.sponsorline.hidden-lg
-              +sponsorCol(pair.second)
-          .row
-            hr.sponsorline.hidden-lg
-            .col-lg-12.visible-lg-block
-              hr
+              .col-lg-12.visible-lg-block
+                hr
         a.btn.btn-info.pull-right(href='/sponsoring.html', style='width:160px;margin-bottom: 15px;')
           span.glyphicon.glyphicon-thumbs-up
           |  Sponsor us
 
 
 
-
-mixin sponsorCol(sponsor)
-  .col-lg-6
-    a(href=sponsor.url, target='_blank'): img(src='logos/' + sponsor.logo, alt=sponsor.name, width='160')
+//
+  TODO update when we have sponsors
+  mixin sponsorCol(sponsor)
+    .col-lg-6
+      a(href=sponsor.url, target='_blank'): img(src='logos/' + sponsor.logo, alt=sponsor.name, width='160')
