Add SoCraTes Italy

--- a/socrates/lib/site/views/index.jade
+++ b/socrates/lib/site/views/index.jade
@@ -91,6 +91,11 @@ block content
                 +extlink('http://socratesbe.org', 'SoCraTes BE')
                 br
                 // TODO update when they have new dates: small 22 - 25 Oct 2015, Nieuwpoort
+            .col-sm-6
+              h5
+                +extlink('http://socrates-it.github.io/', 'SoCraTes Italy')
+                br
+                small 12 - 14 May 2016, Rimini
 
 
 
