--- a/softwerkskammer/views/layout.jade
+++ b/softwerkskammer/views/layout.jade
@@ -13,12 +13,12 @@ block specific
       .col-md-12
         h2 Wiki Links
         h4
-          a(href='/wiki/alle/europaweite-veranstaltungen-2015') #{t('general.events_in_europe')} 2015
+          a(href='/wiki/events/2015') #{t('general.events_in_europe')} 2015
           br
           small.
             #{t('general.events_in_europe_desc')}
         h4
-          a(href='/wiki/alle/europaweite-veranstaltungen-2016') #{t('general.events_in_europe')} 2016
+          a(href='/wiki/events/2016') #{t('general.events_in_europe')} 2016
           br
           small.
             #{t('general.events_in_europe_desc')}
