--- a/socrates/lib/site/views/index.jade
+++ b/socrates/lib/site/views/index.jade
@@ -85,16 +85,19 @@ block content
               h5
                 +extlink('http://socrates-day.ch/', 'SoCraTes Day Switzerland')
                 br
+                small &nbsp
                 // TODO update when they have new dates: small 19 June 2015, Zurich
             .col-sm-6
               h5
                 +extlink('http://socrates-fr.github.io', 'SoCraTes France')
                 br
+                small &nbsp
                 // TODO update when they have new dates: small 24 - 27 Sept 2015, Rochegude
             .col-sm-6
               h5
                 +extlink('http://socratesbe.org', 'SoCraTes BE')
                 br
+                small &nbsp
                 // TODO update when they have new dates: small 22 - 25 Oct 2015, Nieuwpoort
 
 
