--- a/softwerkskammer/lib/wiki/views/eventsWithCalendars.jade
+++ b/softwerkskammer/lib/wiki/views/eventsWithCalendars.jade
@@ -16,29 +16,29 @@ block content
       #eventsJan
     .col-lg-4.col-sm-6
       #eventsFeb
-    .clearfix.visible-sm
+    .clearfix.visible-sm.visible-md
     .col-lg-4.col-sm-6
       #eventsMar
     .clearfix.visible-lg
     .col-lg-4.col-sm-6
       #eventsApr
-    .clearfix.visible-sm
+    .clearfix.visible-sm.visible-md
     .col-lg-4.col-sm-6
       #eventsMai
     .col-lg-4.col-sm-6
       #eventsJun
-    .clearfix.visible-lg.visible-sm
+    .clearfix.visible-sm.visible-md.visible-lg
     .col-lg-4.col-sm-6
       #eventsJul
     .col-lg-4.col-sm-6
       #eventsAug
-    .clearfix.visible-sm
+    .clearfix.visible-sm.visible-md
     .col-lg-4.col-sm-6
       #eventsSep
     .clearfix.visible-lg
     .col-lg-4.col-sm-6
       #eventsOkt
-    .clearfix.visible-sm
+    .clearfix.visible-sm.visible-md
     .col-lg-4.col-sm-6
       #eventsNov
     .col-lg-4.col-sm-6
