--- a/softwerkskammer/lib/members/views/get.jade
+++ b/softwerkskammer/lib/members/views/get.jade
@@ -15,7 +15,8 @@ block content
           if (accessrights.canEditMember(member))
             a.btn.btn-default(href='/members/edit/#{encodeURIComponent(member.nickname())}'): i.fa.fa-edit.fa-fw
           if (accessrights.canDeleteMember(member))
-            +reallyDeleteModal('members.delete', '/members/delete/' +encodeURIComponent(member.nickname()))
+            -var deleteoptions = {url: '/members/delete', params: {nickname: member.nickname()}}
+            +reallyDeleteModalPost('members.delete', deleteoptions)
         h2
           | !{(member.socratesOnly() ? '<img src="https://www.socrates-conference.de/img/socrates_no_text_40.png">&nbsp;' : '')}
           | #{member.nickname()}
