update location of SoCraTes UK

--- a/socrates/lib/site/views/index.jade
+++ b/socrates/lib/site/views/index.jade
@@ -80,7 +80,7 @@ block content
               h5
                 +extlink('http://socratesuk.org/', 'SoCraTes UK')
                 br
-                small 2 - 5 June 2016, Farncombe Estate
+                small 2 - 5 June 2016, Dorking
             .col-sm-6
               h5
                 +extlink('http://socrates-day.ch/', 'SoCraTes Day Switzerland')
