New date for SoCraTes Day Switzerland.

--- a/socrates/lib/site/views/index.jade
+++ b/socrates/lib/site/views/index.jade
@@ -85,8 +85,7 @@ block content
               h5
                 +extlink('http://socrates-day.ch/', 'SoCraTes Day Switzerland')
                 br
-                small &nbsp
-                // TODO update when they have new dates: small 19 June 2015, Zurich
+                small 17 June 2016, Zurich
             .col-sm-6
               h5
                 +extlink('http://socrates-fr.github.io', 'SoCraTes France')
