Fixed the link to an experience report.

--- a/socrates/lib/site/views/experienceReports.jade
+++ b/socrates/lib/site/views/experienceReports.jade
@@ -13,7 +13,7 @@ block content
 
       h3 2015
       ul
-        +bloglink('http://blog.cto.hiv/the-magic-of-socrates-conference/', 'The magic of Socrates Conference', 'Markus Tacker a.k.a. coder::by(♥);')
+        +bloglink('https://blog.cto.hiv/the-magic-of-socrates-conference', 'The magic of Socrates Conference', 'Markus Tacker a.k.a. coder::by(♥);')
         +bloglink('http://roth-soft.de/software-craftsmanship/socrates2015-this-is-home-my-crowd-my-family/', '“This is home. This is my crowd. My family.”', 'Stephan Roth')
         +bloglink('http://thilko.com/blog/2015/08/30/socrates-2015/', 'SoCraTes 2015', 'Thilko Richter')
         +bloglink('https://www.zweitag.de/de/blog/news-events/socrates-conference-2015', 'SoCraTes Conference 2015', 'Heiko Zeus')
