--- a/socrates/lib/registration/views/participationinfoform.jade
+++ b/socrates/lib/registration/views/participationinfoform.jade
@@ -1,5 +1,5 @@
 include  ../../../views/formComponents
-mixin participationinfoform(activity, roomOptions, registration)
+mixin participationinfoform(roomOptions, registration)
   .row
     .col-md-6
       h3 Room Options
@@ -120,7 +120,7 @@ mixin participationinfoform(activity, roomOptions, registration)
 
         script.
           $(function () {
-            var selectedInput = $('input[value="' + '#{activity.selectedOptionFor(accessrights.memberId())}"]')
+            var selectedInput = $('input[value="' + '#{registration.selectedOption}"]')
             selectedInput.attr('checked', 'checked');
             selectedInput.parent().parent().parent().addClass('bg-success')
             selectedInput.parent().addClass('text-success')
